added quality related tools