@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <modules>
@@ -18,90 +18,6 @@
     </modules>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-report-plugin -->
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>3.0.0-M7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.5</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jxr-plugin -->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-jxr-plugin</artifactId>-->
-<!--            <version>3.3.0</version>-->
-<!--        </dependency>-->
 
     </dependencies>
-
-<!--    <build>-->
-<!--            <plugins>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                    <version>3.0</version>-->
-<!--                    <configuration>-->
-<!--                        <encoding>UTF-8</encoding>-->
-<!--                        <source>1.8</source>-->
-<!--                        <target>1.8</target>-->
-<!--                    </configuration>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.apache.maven.plugins</groupId>-->
-<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                    <version>2.22.0</version>-->
-<!--                    <configuration>-->
-<!--                        &lt;!&ndash; The argLine placeholder will be filled by the JaCoCo maven plugin. For details see https://www.eclemma.org/jacoco/trunk/doc/prepare-agent-mojo.html &ndash;&gt;-->
-<!--                        <argLine>-XX:MaxPermSize=512m</argLine>-->
-<!--                    </configuration>-->
-<!--                </plugin>-->
-<!--                <plugin>-->
-<!--                    <groupId>org.jacoco</groupId>-->
-<!--                    <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                    <version>0.8.2</version>-->
-<!--                    <executions>-->
-<!--                        <execution>-->
-<!--                            <id>jacoco-prepare</id>-->
-<!--                            <goals>-->
-<!--                                <goal>prepare-agent</goal>-->
-<!--                            </goals>-->
-<!--                        </execution>-->
-<!--                        <execution>-->
-<!--                            <id>jacoco-report</id>-->
-<!--                            <phase>prepare-package</phase>-->
-<!--                            <goals>-->
-<!--                                <goal>report</goal>-->
-<!--                            </goals>-->
-<!--                        </execution>-->
-<!--                        <execution>-->
-<!--                            <id>jacoco-check</id>-->
-<!--                            <phase>verify</phase>-->
-<!--                            <goals>-->
-<!--                                <goal>check</goal>-->
-<!--                            </goals>-->
-<!--                            <configuration>-->
-<!--                                <rules>-->
-<!--                                    <rule>-->
-<!--                                        <element>BUNDLE</element>-->
-<!--                                        <limits>-->
-<!--                                            <limit>-->
-<!--                                                <counter>INSTRUCTION</counter>-->
-<!--                                                <value>COVEREDRATIO</value>-->
-<!--                                                <minimum>0.69</minimum> &lt;!&ndash; means 69% &ndash;&gt;-->
-<!--                                                <maximum>0.70</maximum> &lt;!&ndash; means 70% &ndash;&gt;-->
-<!--                                            </limit>-->
-<!--                                        </limits>-->
-<!--                                    </rule>-->
-<!--                                </rules>-->
-<!--                            </configuration>-->
-<!--                        </execution>-->
-<!--                    </executions>-->
-<!--                </plugin>-->
-<!--            </plugins>-->
-<!--    </build>-->
 </project>
